# mesa-fork

./: meson.build  meson.options
src/: meson.build
src/amd/common/: ac_gpu_info.c  ac_parse_ib.c  meson.build
src/gallium/: meson.build
src/gallium/auxiliary/: meson.build
src/gallium/auxiliary/pipe-loader/: pipe_loader_drm.c
src/gallium/auxiliary/util/: u_inlines.h
src/gallium/auxiliary/vl/: vl_codec.c  vl_video_buffer.c  vl_winsys_amdgpu.c  vl_winsys_drm.c
src/gallium/auxiliary/vl/winsys/: meson.build  vl_winsys_amdgpu.c  vl_winsys_dri.c  vl_winsys_dri3.c  vl_winsys_dri_vgem.c  vl_winsys_drm.c  vl_winsys_kopper.c  vl_winsys_win32.c  vl_winsys_xlib_swrast.c
src/gallium/drivers/radeonsi/: meson.build  radeon_vcn_dec.c  radeon_vcn_dec_jpeg.c  radeon_video.c  si_buffer.c  si_build_pm4.h  si_get.c  si_pipe.c  si_pipe.h  si_pipe_inlines.h  si_state_decode.c  si_state_draw.cpp  si_texture.c  si_texture_decode.c  si_uvd.c
src/gallium/frontends/mediafoundation/: context.h  hmft_entrypoints.h  mfd3dmanager.h  mfpipeinterop.h  stats_buffer_manager.h
src/gallium/frontends/va/: buffer.c  config.c  context.c  decode.c  decode_stub.c  display.c  image.c  meson.build  picture.c  postproc.c  subpicture.c  surface.c
src/gallium/include/winsys/: radeon_winsys.h
src/gallium/targets/va/: meson.build
src/gallium/winsys/amdgpu/drm/: amdgpu_winsys.c  meson.build
src/util/: meson.build
subprojects/: libva.wrap
